# task-backend

./: .env.local  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: celery.py  main.py
app/alembic/: env.py
app/api/: deps.py  main.py
app/api/routes/: items.py  jobs.py  language.py  login.py  task.py  users.py  worker.py
app/core/: celeryconfig.py  config.py  db.py
app/models/: __init__.py  item.py  job.py  task.py  user.py
app/schemas/: __init__.py  item.py  job.py  task.py  token.py  user.py
app/services/: celery_monitor.py  item.py  job.py  login.py  task.py  user.py
app/tasks/: task.py
app/tests/: conftest.py
app/tests/api/api_v1/: test_users.py
app/tests/utils/: user.py  utils.py
deploy/: docker_compose.sh  nginx.conf
scripts/: start_celery.sh
sql/: init.sql
