[project]
name = "fastapiproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.14.1",
    "bcrypt==4.0.1",
    "celery[redis]>=5.4.0",
    "fastapi<1.0.0,>=0.115.6",
    "fastapi-pagination>=0.12.34",
    "passlib[bcrypt]>=1.7.4",
    "psutil>=7.0.0",
    "pydantic-settings>=2.7.1",
    "pydantic[email]>=2.10.5",
    "pyjwt>=2.10.1",
    "pymysql>=1.1.1",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.22",
    "tenacity>=9.0.0",
    "uvicorn>=0.34.0",
]
